Add our 'about_me' page and shortcodes to support it.

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,10 @@ jobs:
     script:
       - git clone https://github.com/carlosonunez/https-hugo-bloggen blog-gen
       - cd blog-gen
-      - ln -s ../posts posts
-      - ln -s ../static static
-      - ln -f -s ../config.tmpl.toml config.tmpl.toml
+      - rm -rf posts static config.toml.tmpl
+      - cp -frv ../static/ static
+      - cp -frv ../posts/ posts
+      - cp -frv ../layouts/* layouts/
+      - cp ../config.toml.tmpl config.toml.tmpl
       - make create_site_folder_so_travis_works 
       - make deploy
