Migrate some more content. Also, it turns out that we don't need to individually mount each Hugo directory since HOST_PWD is passed through to bloggen. Also, also, Hugo supports non-post menu items. I am loving this!

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 # Don't index environment metadata or dotenv's
 .env_info
 .env
@@ -7,3 +9,6 @@
 # When testing locally, don't commit generated sites or themes
 site/
 themes/
+
+# Ignore auto-generated config
+config.toml
