Our blog isn't ready for this yet; revert so we can get back to a working build

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,13 @@ jobs:
   - stage: deploy
     name: Deploy the blog up to AWS
     script:
-      - git clone https://github.com/carlosonunez/https-hugo-bloggen
-      - docker-compose run --rm get-production-env
-      - docker-compose run --rm deploy-blog
+      - git clone https://github.com/carlosonunez/https-hugo-bloggen blog-gen
+      - cd blog-gen
+      - mkdir content
+      - rm -rf content static config.toml.tmpl
+      - cp -frv ../static/ static
+      - cp -frv ../content/* content/
+      - cp -frv ../layouts/* layouts/
+      - cp ../config.toml.tmpl config.toml.tmpl
+      - make create_site_folder_so_travis_works 
+      - make deploy
