Continue with our migration, and add a 'robots.txt' file with some SEO add-ons.

--- a/config.toml
+++ b/config.toml
@@ -4,8 +4,11 @@ author = "Carlos Nunez"
 paginate = "15"
 theme = "arabica"
 enableInlineShortcodes = true
-keywords = "devops,systems administration,sysadmin,agile,cloud native,kubernetes,aws,azure,programming,bash,ruby,java,python,powershell,docker,openshift,rancher,git,"
+enableRobotsTXT = true
+canonifyURLs = true
+
 [params]
+  keywords = "devops,systems administration,sysadmin,agile,cloud native,kubernetes,aws,azure,programming,bash,ruby,java,python,powershell,docker,openshift,rancher,git,,technology,IT,tech,business"
   description = "thoughts about devops, technology, and faster business from a random guy from dallas."
   dateFormatUse = "2018-01-01"
   twitter = "easiestnameever"
