Add Google Analytics and summary breaks.

--- a/config.toml
+++ b/config.toml
@@ -6,6 +6,7 @@ theme = "arabica"
 enableInlineShortcodes = true
 enableRobotsTXT = true
 canonifyURLs = true
+googleAnalytics = "foo"
 
 [params]
   keywords = "devops,systems administration,sysadmin,agile,cloud native,kubernetes,aws,azure,programming,bash,ruby,java,python,powershell,docker,openshift,rancher,git,,technology,IT,tech,business"
