Add our Google Search verification code and remove our test config.toml

--- a/.env.test
+++ b/.env.test
@@ -8,6 +8,7 @@ HUGO_BASE_URL=http://localhost
 HUGO_DESCRIPTION=thoughts about devops, technology, and faster business from a random guy from dallas.
 HUGO_ENABLEEMOJI=true
 HUGO_GOOGLEANALYTICS=foo
+HUGO_GOOGLE_SEARCH_VERIFICATION_CODE=foo
 HUGO_LANGUAGECODE=en
 HUGO_PAGINATE=15
 HUGO_THEME_REPO_URL=https://github.com/nirocfz/arabica
