Use local themes when testing locally, and render drafts as well so that I can push without having to remember to add 'draft: true' back to post front-matter.

--- a/.env.test
+++ b/.env.test
@@ -14,6 +14,7 @@ HUGO_PAGINATE=15
 HUGO_THEME_REPO_URL=https://github.com/nirocfz/arabica
 HUGO_TITLE=neurons firing from a keyboard
 HUGO_VERSION=0.53
+USE_LOCAL_THEME=true
 INFRASTRUCTURE_PROVIDER=aws
 LINKEDIN_HANDLE=carlosindfw
 SHELLCHECK_DOCKER_IMAGE=koalaman/shellcheck
