--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ jobs:
       - cp -frv ../content/* content/
       - cp -frv ../layouts/* layouts/
       - cp ../config.toml.tmpl config.toml.tmpl
-      - make create_site_folder_so_travis_works 
-      - make deploy
+      - COMMIT_SHA=$(git rev-parse HEAD | head -c8) make create_site_folder_so_travis_works
+      - COMMIT_SHA=$(git rev-parse HEAD | head -c8) make deploy
 notifications:
   email:
     recipients:
