Add a script that creates a post for me so that I'm not copy pasting from older posts all of the time. Technically I could use 'hugo generate' for this purpose, but my post format is boilerplate enough for this approach to work fine.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,19 @@ services:
       - "$HOME/.travis:/root/.travis"
     working_dir: /app
 
+  create-new-post:
+    image: alpine
+    volumes:
+      - "$PWD/scripts:/app"
+      - "$PWD/content/post:/content"
+      - "$PWD/static/images:/images"
+    working_dir: /work
+    environment:
+      - VERBOSE_MODE
+    entrypoint: 
+      - sh
+      - /app/create_new_post.sh
+
   deploy-blog:
     build:
       context: ${BLOG_GEN_DIRECTORY:-./https-hugo-bloggen}
