--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,13 @@ services:
       - "$HOME/.travis:/root/.travis"
     working_dir: /app
 
+  lint:
+    image: wreulicke/redpen:1.10.1
+    volumes:
+      - "$PWD:/work"
+    working_dir: /work
+    command: "redpen --version"
+
   deploy-blog:
     build:
       context: ${BLOG_GEN_DIRECTORY:-./https-hugo-bloggen}
