--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Deploy the blog
         run:
           - cd blog-gen
-          - COMMIT_SHA=$(git rev-parse HEAD | head -c8) make deploy
+          - COMMIT_SHA=$(GIT_DIR=$(realpath ..)/.git git rev-parse HEAD | head -c8) make deploy
