--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,18 +14,18 @@ jobs:
         env:
           ENV_PASSWORD: ${{ secrets.env_file_encryption_key }}
       - name: Fetch the latest version of https-hugo-bloggen
-        run:
-          - git clone https://github.com/carlosonunez/https-hugo-bloggen blog-gen
+        run: >-
+          git clone https://github.com/carlosonunez/https-hugo-bloggen blog-gen
       - name: Merge our blog with blog-gen
-        run:
-          - cd blog-gen
-          - rm -rf static config.toml.tmpl
-          - mkdir content
-          - cp -frv ../static/ static
-          - cp -frv ../content/* content/
-          - cp -frv ../layouts/* layouts/
-          - cp ../config.toml.tmpl config.toml.tmpl
+        run: >-
+          cd blog-gen &&
+          rm -rf static config.toml.tmpl &&
+          mkdir content &&
+          cp -frv ../static/ static &&
+          cp -frv ../content/* content/ &&
+          cp -frv ../layouts/* layouts/ &&
+          cp ../config.toml.tmpl config.toml.tmpl
       - name: Deploy the blog
         run:
-          - cd blog-gen
-          - COMMIT_SHA=$(GIT_DIR=$(realpath ..)/.git git rev-parse HEAD | head -c8) make deploy
+          cd blog-gen &&
+          COMMIT_SHA=$(GIT_DIR=$(realpath ..)/.git git rev-parse HEAD | head -c8) make deploy
