--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Deploy the blog
         run:
           cd blog-gen &&
-          COMMIT_SHA=$(GIT_DIR=$(realpath ..)/.git git rev-parse HEAD | head -c8) make deploy
+          ENV_FILE=../.env COMMIT_SHA=$(GIT_DIR=$(realpath ..)/.git git rev-parse HEAD | head -c8) make deploy
