--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,8 @@ jobs:
         run: ./docker-compose -f docker-compose.ci.yml run --rm decrypt-env
         env:
           ENV_PASSWORD: ${{ secrets.env_file_encryption_key }}
-      - name: Fetch the latest version of blog-gen
+      - name: Fetch blog-gen
         run: >-
-          git clone https://github.com/carlosonunez/https-hugo-bloggen blog-gen
+          git clone --reference=v2 https://github.com/carlosonunez/https-hugo-bloggen blog-gen
       - name: Deploy the blog
         run: ./blog-gen/scripts/deploy.sh
