--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,14 +15,16 @@ jobs:
         env:
           DOCKER_COMPOSE_URL: https://github.com/docker/compose/releases/download/1.29.0
 
-      - name: Decrypt environment file
-        run: ./docker-compose -f docker-compose.ci.yml run --rm decrypt-env
-        env:
-          ENV_PASSWORD: ${{ secrets.env_file_encryption_key }}
       - name: Fetch blog-gen
         env:
           BLOG_GEN_VERSION: 2.0.9
         run: >-
-          git clone -b "v${BLOG_GEN_VERSION}" https://github.com/carlosonunez/https-hugo-bloggen blog-gen
+          make fetch_blog_gen
+
+      - name: Decrypt environment file
+        run: make decrypt_env
+        env:
+          ENV_PASSWORD: ${{ secrets.env_file_encryption_key }}
+
       - name: Deploy the blog
-        run: ./blog-gen/scripts/deploy
+        run: make deploy
