Update blog to Hugo v0.94+
`blog-gen` uses Hugo v0.111+ after release `2.2.0`. Update layouts to
use `.RelPermalink` instead of deprecated link fields (`.URL`, `.RSS`,
and so on.)

Signed-off-by: Carlos Nunez <13461447+carlosonunez@users.noreply.github.com>

--- a/sitemap.toml
+++ b/sitemap.toml
@@ -13,7 +13,7 @@
 [[ menu.main ]]
   identifier = "talks"
   name = "Talks"
-  url = "/talks"
+  url = "https://carlosnunez.me/talks"
   weight = -9
 
 [[ menu.main ]]
