--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Install Docker Compose
-        run: curl -L ${DOCKER_COMPOSE_URL}/docker-compose-`uname -s`-`uname -m` > ./docker-compose &&
-          chmod +x ./docker-compose
-        env:
-          DOCKER_COMPOSE_URL: https://github.com/docker/compose/releases/download/v2.2.3
+      - uses: KengoTODA/actions-setup-docker-compose@main
+        name: Set up Docker Compose
+        with:
+          version: '2.27.1'
 
       - name: Fetch blog-gen
         env:
