[ci] Don't run on changes to the README
Signed-off-by: Carlos Nunez <13461447+carlosonunez@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - README.md
+      - scripts
 jobs:
   deploy:
     runs-on: ubuntu-latest
