[post] CNCF Weekly!
I'm starting a weekly blog post series where I try tools in the CNCF
landsacpe and talk about them.

Signed-off-by: Carlos Nunez <13461447+carlosonunez@users.noreply.github.com>

--- a/sitemap.toml
+++ b/sitemap.toml
@@ -5,9 +5,9 @@
   weight = -10
 
 [[ menu.main ]]
-  identifier = "retros"
-  name = "Retrospectives"
-  url = "{{ .Env.RETROSPECTIVES_URL }}"
+  identifier = "cncf-weekly"
+  name = "CNCF Weekly"
+  url = "/keywords/cncf-weekly"
   weight = -9
 
 [[ menu.main ]]
